# ez_cmdliner

./: .drom  .gitignore  CHANGES.md  Makefile  README.md  build.ocp2  drom.toml  dune-project  ez-cmdliner.opam  ez_cmdliner.opam  ezcmd.ml  ezcmd.mli  index.html
.github/workflows/: ci.ml  doc-deploy.yml  workflow.yml
doc/: index.html
doc/ez_cmdliner/: index.html
doc/ez_cmdliner/Ezcmd/: index.html
doc/ez_cmdliner/Ezcmd__/: index.html
doc/ez_cmdliner/Ezcmd__V1/: index.html
doc/ez_cmdliner/Ezcmd__V2/: index.html
docs/: index.html
docs/api/: index.html
docs/api/ez-cmdliner/: index.html
docs/doc/: index.html
docs/doc/ez_cmdliner/: index.html
docs/sphinx/: .buildinfo  about.html  genindex.html  index.html  install.html  license.html  objects.inv  search.html  searchindex.js  usage.html
docs/sphinx/.doctrees/: about.doctree  environment.pickle  index.doctree  install.doctree  (+1 more)
opam/: ez_cmdliner.opam
sphinx/: .buildinfo  about.html  about.rst  conf.py  genindex.html  index.html  index.rst  install.html  install.rst  license.html  license.rst  objects.inv  search.html  searchindex.js
sphinx/.doctrees/: about.doctree  environment.pickle  index.doctree  install.doctree  license.doctree
sphinx/_sources/: install.rst.txt
sphinx/_static/: documentation_options.js
src/: dune  ezcmd.ml  ezcmd.mli
src/ez_cmdliner/: dune  ezcmd.ml  ezcmd.mli  index.mld  package.toml  v1.ml  v1.mli  v2.ml  v2.mli
test/output-tests/: dune  test1.ml  test2.expected
tests/: build.ocp2  dune  test1.ml  test2.ml  test3.ml  test_cmd.ml  test_parse.ml  test_subcmds.ml
(+27 files in other folders)
